<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/txtEvidence"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <TextView
        android:id="@+id/txtLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:text="@string/txtIniSesion"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtIniSesion"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txtRegisterPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCreateAcc"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtRegister"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txtCreatedBy"
        android:layout_width="389dp"
        android:layout_height="66dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/txtCreatedBy"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_200"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
